adding meta tags for facebook (meta) and twitter (x)

--- a/index.html
+++ b/index.html
@@ -2,8 +2,30 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <!-- <link rel="icon" type="image/svg+xml" href="/vite.svg" /> -->
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- <link rel="icon" type="image
+     /svg+xml" href="/vite.svg" /> -->
+     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Weather App, free to use, accurate weather, upto date data and more , checkout of more info">
+    <meta name="keywords" content="Weather App, free to use, accurate weather">
+    <!-- <link rel="author" href="https://plus.google.com/{{googlePlusId}}" /> -->
+    <link rel="canonical" href="https://responsive-weather-app-using-react.vercel.app" />
+
+
+ // meta tag for facebook (meta)
+<meta property="og:url" content="https://responsive-weather-app-using-react.vercel.app">
+<meta property="og:image" content="https://backend-for-resposive-weather-app.vercel.app/weatherimg">
+<meta property="og:description" content="Weather App, free to use, accurate weather, upto date data and more , checkout of more info">
+<meta property="og:title" content="WeatherWave">
+<meta property="og:site_name" content="WeatherWave , site for weather info">
+<meta property="og:see_also" content="https://responsive-weather-app-using-react.vercel.app/"> 
+
+// meta tag for twitter
+
+<meta name="twitter:card" content="Weather App, free to use, accurate weather, upto date data and more , checkout of more info">
+<meta name="twitter:url" content="https://responsive-weather-app-using-react.vercel.app">
+<meta name="twitter:title" content="WeatherWave">
+<meta name="twitter:description" content="Weather App, free to use, accurate weather, upto date data and more , checkout of more info">
+<meta name="twitter:image" content="https://backend-for-resposive-weather-app.vercel.app/weatherimg">
     <link rel="stylesheet" href="style.css">
     <link id="favicon" rel="icon" href="weather.svg"/>
     <title>WeatherWave</title>
