adding meta tags for facebook (meta), whatapp  and twitter (x)

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="canonical" href="https://responsive-weather-app-using-react.vercel.app" />
 
 
- // meta tag for facebook (meta)
+ // meta tag for facebook (meta) (whatsapp)
 <meta property="og:url" content="https://responsive-weather-app-using-react.vercel.app">
 <meta property="og:image" content="https://backend-for-resposive-weather-app.vercel.app/weatherimg">
 <meta property="og:description" content="Weather App, free to use, accurate weather, upto date data and more , checkout of more info">
@@ -19,7 +19,7 @@
 <meta property="og:site_name" content="WeatherWave , site for weather info">
 <meta property="og:see_also" content="https://responsive-weather-app-using-react.vercel.app/"> 
 
-// meta tag for twitter
+// meta tag for twitter (x)
 
 <meta name="twitter:card" content="Weather App, free to use, accurate weather, upto date data and more , checkout of more info">
 <meta name="twitter:url" content="https://responsive-weather-app-using-react.vercel.app">
